--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,18 @@ html, body {
   height: 100%;
 }
 
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb{
+  background: #3cd6ed;
+}
+
 .floatleft {
   float: left;
 }
@@ -45,10 +57,10 @@ p {
   color: #444;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h5, h6 {
   font-family: 'Raleway', sans-serif;
   margin: 0 0 15px;
-  color: #444;
+  color: rgb(255, 255, 255);
   font-weight: 500;
 }
 
@@ -59,7 +71,21 @@ h1 {
 
 h2 {
   font-size: 38px;
-  line-height: 40px;
+  line-height: 50px;
+  background: linear-gradient(to right, #06599b 10%, #01ef96 50%, #06599b
+  90%
+  );
+  background-size: 200% auto;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: animate 2s linear infinite;
+}
+
+@keyframes animate {
+  to {
+    background-position: 200% center;
+  }
 }
 
 h3 {
@@ -70,6 +96,7 @@ h3 {
 h4 {
   font-size: 24px;
   line-height: 26px;
+  color: #363636;
 }
 
 h5 {
@@ -165,6 +192,11 @@ div#preloader {
 
 ::-moz-selection {
   background: #3EC1D5;
+  text-shadow: none;
+}
+
+h2::selection {
+  background: none;
   text-shadow: none;
 }
 
@@ -529,6 +561,70 @@ div#preloader {
   color: #fff;
   font-weight: 500;
 }
+
+.ournumber h1{
+  margin-top: 30px !important;
+  margin-bottom: 0px !important;
+  color: white;
+  text-align: center;
+  font-size: 3em;
+  font-family: Arial, Helvetica, sans-serif !important;
+  font-weight: bolder;
+}
+
+
+
+
+.icon-ournumbers{
+  padding: 25px;
+  margin-bottom: 25px;
+  border: 10px solid #fff;
+  background-color: transparent;
+  border-radius: 50%;
+  color: #ffffff;
+  text-align: center;
+  line-height: 92px;
+  width: 150px;
+  height: 150px;
+  display: inline-block;
+}
+
+
+
+
+.class-ournumbers {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  text-align: center;
+  
+}
+
+.ournumber {
+  text-align: center;
+  margin-top: 20px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url(img/ournumbers.jpg);
+  background-size: cover;
+  background-position: center;
+  color: #efefef !important;
+  background-attachment: fixed;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.ournumber h1{
+  margin-bottom: 40px;
+}
+
+.diff-ournumbers::after {
+  content: '';
+  background: #efefef;
+  display: block;
+  height: 1px;
+  width: 150px;
+  margin: 5px auto 5px;
+
+}
+
 
 /*----------------------------------------
   6.Faq Area
