--- a/css/style_landingpage.css
+++ b/css/style_landingpage.css
@@ -57,7 +57,7 @@ p {
   color: #444;
 }
 
-h1, h2, h3, h5, h6 {
+h1, h2, h3, h5, h6, h7{
   font-family: 'Raleway', sans-serif;
   margin: 0 0 15px;
   color: rgb(255, 255, 255);
@@ -105,7 +105,7 @@ h5 {
 }
 
 h6 {
-  font-size: 16px;
+  font-size: 10px;
   line-height: 20px;
 }
 
